// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Resource Schema Snapshots > Resource: data-explorer-ui > paramsSchema JSON output should be stable 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "description": "No parameters. Returns the static HTML app.",
  "properties": {},
  "type": "object",
}
`;

exports[`Resource Schema Snapshots > Resource: echo-resource > outputSchema JSON output should be stable 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "description": "Echo resource response payload.",
  "properties": {
    "message": {
      "description": "The echoed message.",
      "type": "string",
    },
    "requestUri": {
      "description": "The request URI used to fetch this resource.",
      "format": "uri",
      "type": "string",
    },
    "timestamp": {
      "description": "ISO 8601 timestamp when the response was generated.",
      "format": "date-time",
      "pattern": "^(?:(?:\\d\\d[2468][048]|\\d\\d[13579][26]|\\d\\d0[48]|[02468][048]00|[13579][26]00)-02-29|\\d{4}-(?:(?:0[13578]|1[02])-(?:0[1-9]|[12]\\d|3[01])|(?:0[469]|11)-(?:0[1-9]|[12]\\d|30)|(?:02)-(?:0[1-9]|1\\d|2[0-8])))T(?:(?:[01]\\d|2[0-3]):[0-5]\\d(?::[0-5]\\d(?:\\.\\d+)?)?(?:Z))$",
      "type": "string",
    },
  },
  "required": [
    "message",
    "timestamp",
    "requestUri",
  ],
  "type": "object",
}
`;

exports[`Resource Schema Snapshots > Resource: echo-resource > paramsSchema JSON output should be stable 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "description": "Echo resource parameters.",
  "properties": {
    "message": {
      "description": "Optional message to echo back. If omitted, it may be derived from the URI path/host.",
      "type": "string",
    },
  },
  "type": "object",
}
`;
